# theos-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BOT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  STUDY.md  STYLE.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
docs/: index.md
docs/dev/plans/: 2026-04-14-memory-upgrade-v1.md  2026-04-14-memory-v2-sprint0.md  2026-04-14-memory-v2-sprint1.md  2026-04-14-memory-v2-sprint2.md  2026-04-14-memory-v2-sprint3.md  TEMPLATE.md
docs/dev/specs/: 2026-04-14-memory-upgrade-v1.md  2026-04-14-memory-v2-roadmap.md  (+1 more)
docs/modules/: TEMPLATE.md
hooks/: changelog.py  post-chat  pre-chat
instinct/: core.md
instinct/scripts/: evolve.js  reflect.js  reflex.js
scripts/: check_config_schema.py  config_schema_baseline.json  smoke_core_runtime.py  smoke_core_wheel.py
skills/: README.md
skills/clawhub/: SKILL.md
skills/cron/: SKILL.md
skills/find-skills/: SKILL.md
skills/github/: SKILL.md
skills/paper-reading/: SKILL.md
skills/reference/: SKILL.md
skills/summarize/: SKILL.md
skills/tmux/: SKILL.md
skills/weather/: SKILL.md
src/: __init__.py  __main__.py
src/agent/: __init__.py  agentfs.py  approval.py  context.py  definitions.py  instinct_commands.py  loop.py  loop_context.py  loop_core.py  loop_detector.py  loop_finalize.py  loop_genver.py  loop_memory.py  mcp_manager.py  neuro_symbolic.py  skills.py  slash_commands.py  subagent.py  tool_sets.py
src/auth/: __init__.py  oauth_manager.py  oauth_plugin.py  store.py  types.py
src/bus/: __init__.py  events.py  queue.py
src/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  registry.py  slack.py  telegram.py  whatsapp.py
src/cli/: __init__.py  agent_cmd.py  auth_cmd.py  auth_oauth_cmd.py  channels_cmd.py  commands.py  config_cmd.py  cron_cmd.py  display.py  feishu_auth_cmd.py  gateway_cmd.py  init_channels.py  init_cmd.py  init_genver.py  init_providers.py  init_roles.py  init_soul.py  repl.py  report_cmd.py  status_cmd.py  ui_cmd.py
src/config/: __init__.py  loader.py  schema.py  schema_channels.py
src/cron/: __init__.py  heartbeat.py  service.py  types.py
src/daemon/: __init__.py  base.py  health.py  launchd.py  systemd.py
src/dream/: __init__.py  runner.py  tool_registry.py
src/feishu/: __init__.py  api.py  api_calendar.py  api_chat.py  api_contacts.py  api_sheets.py  api_tasks.py  api_write.py  client.py  edit.py  edit_arena.py  errors.py  feishu2md.py  fuzzy.py  md2blocks.py  oauth_callback.py  remote_auth.py  retry.py  token.py  token_refresh.py  utils.py
src/genver/: __init__.py  artifact_store.py  handoff.py  loop.py  models.py  phases.py  pipeline.py  prompts.py  review.py  runner.py  verifier.py  workspace.py
src/hooks/: __init__.py  reflector.py  runner.py
src/memory/: __init__.py  consolidation.py  embeddings.py  extract.py  index.py  json_utils.py  kg_gc.py  knowledge_graph.py  knowledge_search.py  memory_events.py  mmr.py  recall.py  recall_journal.py  recall_maintenance.py  recall_ranking.py  response_cache.py  rule_cleanup.py  scope.py  sql.py  store.py  structured.py  structured_models.py  tiers.py  token_budget.py
src/orchestrator/: __init__.py  policies.py  state_machine.py  turn_lifecycle.py  turn_record.py
src/poller/: __init__.py  base.py  service.py  x_poller.py
src/providers/: __init__.py  anthropic_provider.py  base.py  credentials.py  custom_provider.py  errors.py  factory.py  openai_codex_provider.py  recovery.py  recovery_provider.py  registry.py  tool_args.py  tool_call_parser.py  transcription.py
src/reporting/: __init__.py  generator.py  metrics.py
src/safety/: __init__.py  layer.py  leak_detector.py  policy.py  sanitizer.py
src/security/: __init__.py  autonomy.py  config_secrets.py  credential_injector.py  crypto.py  keychain.py  secret_refs.py
src/session/: __init__.py  checkpoint_utils.py  group_dispatcher.py  manager.py  runtime_state.py  subagent_store.py  turn_store.py
src/store/: __init__.py  dashboard_writer.py  database.py  event_store.py
src/templates/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md
src/ui/: __init__.py  db.py  events.py  log_events.py  server.py  tailscale.py
src/utils/: __init__.py  helpers.py  path.py  proxy.py  text.py  tokenize.py  truncation.py  usage.py
tests/: test_agent_definitions.py  test_agent_loop_init.py  test_agent_streaming.py  test_anthropic_oauth_login.py  test_anthropic_oauth_refresh.py  test_anthropic_provider.py  test_apply_patch.py  test_approval_gate.py  test_auth_oauth_cmd.py  test_autonomous_mode.py  test_autonomy.py  test_browser_tool.py  test_bus.py  test_capability_search_tool.py  test_channel_manager.py  test_cli_display.py  test_cli_input.py  test_commands.py  test_compaction.py  test_compress_image.py  test_config_cmd.py  test_config_loader.py  test_config_loader_encryption.py  test_config_secrets.py  test_consolidate_offset.py  test_consolidation_service.py  test_context_prompt_cache.py  test_credential_injector_integration.py  test_credentials.py  test_cron_commands.py  test_cron_service.py  test_cron_types.py  test_cross_session_consolidation.py  test_database.py  test_deferred_tools.py  test_discord_channel.py  test_docker.sh  test_dream_output.py  test_dream_runner.py  test_dream_tool_policy.py  (+137 more)
tests/agent/: test_agent_mode_cmd.py  test_model_cmd.py
tests/daemon/: test_health.py  test_launchd.py  test_resolve.py  test_systemd.py
tests/ui/: test_config_routes.py  test_cron_routes.py  test_dashboard_callback.py  test_db.py  test_events.py  test_gateway_ui.py  test_health_route.py  test_logs_routes.py  test_memory_routes.py  test_routes.py  test_settings_routes.py  test_tailscale.py  test_tools_routes.py  test_wiki_routes.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
(+156 files in other folders)
